@@ -1,83 +1,66 @@
-/* Language Switcher */
-#lang_sel,
-#lang_sel_click {
-	height: auto;
-	text-shadow: none;
+/* Custom Language Switcher */
+.tb-wpml-switcher ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.tb-wpml-switcher a,
+.tb-wpml-switcher a:hover,
+.tb-wpml-switcher a:focus {
+	color: inherit;
+	text-decoration: none;
+}
+.tb-wpml-switcher .active {
+	display: inline-block;
+	line-height: 100%;
+	padding: 0 5px;
+}
+.tb-wpml-switcher .active .fa {
+	margin-left: 5px;
+}
+.rtl .tb-wpml-switcher .active .fa {
+	margin-right: 5px;
+	margin-left: 0;
+}
+.tb-wpml-switcher > ul > li {
+	position: relative;
+}
+.tb-wpml-switcher .lang-sub-menu {
+	display: none;
+	padding: 10px 0 0 0;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	min-width: 100px;
 	z-index: 999;
 }
-#lang_sel ul ul,
-#lang_sel_click ul ul {
-	border: none;
-	float: none;
-	position: absolute;
-	top: 24px;
-	left: 0;
+.rtl .tb-wpml-switcher .lang-sub-menu {
 	right: 0;
+	left: inherit;
 }
-#lang_sel li,
-#lang_sel_click li {
-	float: none;
+.tb-wpml-switcher > ul > li:hover .lang-sub-menu {
+	display: block;
 }
-#lang_sel img.iclflag,
-#lang_sel_click img.iclflag {
-	top: 1px;
-	width: 15px;
-	height: 10px;
-	vertical-align: initial;
+.tb-wpml-switcher .lang-sub-menu li a {
+	background: #ffffff;
+	border: 1px solid #dddddd;
+	border-bottom: none;
+	display: block;
+	line-height: 1;
+	padding: 6px 8px;
 }
-#lang_sel_click img.iclflag {
-	margin-right: 5px;
+.tb-wpml-switcher .lang-sub-menu li a:hover {
+	background: #f2f2f2;
 }
-#lang_sel a,
-#lang_sel_click a {
-	background: #ffffff !important;
-	border-color: #dddddd !important;
-	border-width: 0 1px 1px 1px;
-	border-style: solid;
-	color: #666666 !important;
-	font-size: 11px;
-	height: auto;
-	line-height: 1 !important;
-	padding: 5px 10px;
+.tb-wpml-switcher .lang-sub-menu li:last-child a {
+	border-bottom: 1px solid #dddddd;
 }
-#lang_sel a:hover,
-#lang_sel_click a:hover {
-	color: #666666 !important;
-	background: #f2f2f2 !important;
+.site-header.transparent .tb-wpml-switcher .lang-sub-menu li a {
+	border-color: rgba(0,0,0,.5);
+	background-color: rgba(0,0,0,.2)
 }
-#lang_sel a.lang_sel_sel,
-#lang_sel_click a.lang_sel_sel {
-    background: #ffffff;
-    border-width: 1px;
-    color: #666666;
-    padding: 5px 10px 6px 10px;
-}
-#lang_sel a.lang_sel_sel:hover,
-#lang_sel_click a.lang_sel_sel:hover {
-    text-decoration: none;
-    color: #666666;
-}
-#lang_sel a.lang_sel_sel:after,
-#lang_sel_click a.lang_sel_sel:after {
-	content: "\f0d7";
-	font-family: "FontAwesome";
-	margin-top: 2px;
-	position: absolute;
-	right: 8px;
-}
-.site-header.transparent #lang_sel a,
-.site-header.transparent #lang_sel_click a {
-	background: rgba(0,0,0,.2) !important;
-	border-color: rgba(0,0,0,.5) !important;
-	color: #ffffff !important;
-}
-.site-header.transparent #lang_sel a:hover,
-.site-header.transparent #lang_sel_click a:hover {
-	background: rgba(0,0,0,.5) !important;
-}
-.site-header.transparent #lang_sel img.iclflag,
-.site-header.transparent #lang_sel_click img.iclflag {
-	box-shadow: 0 0 5px rgba(0,0,0,.7);
+.site-header.transparent .tb-wpml-switcher .lang-sub-menu li a:hover {
+	background-color: rgba(0,0,0,.5);
 }
 
 /* Horizontal List */
